--- a/src/components/StartScreen.css
+++ b/src/components/StartScreen.css
@@ -7,9 +7,7 @@ COLORS
 #26213e */
 @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap');
 
-.start {
-  font-size: 1.25rem;
-}
+
 
 button {
   color: #f3e460;
@@ -17,9 +15,10 @@ button {
 
 h1 {
   color: #f3e460;
-  font-size: 5rem;
+  font-size: 3rem;
   font-family: 'Oswald', sans-serif;
   letter-spacing: 2px;
+  margin: 5rem auto;
 }
 
 
@@ -47,4 +46,20 @@ em::after {
   to {
     opacity: 0%;
   }
+}
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 12rem;
+  color: #f3e460;
+}
+
+footer a {
+  margin: 0 auto;
+}
+
+svg {
+  width: 20px;
 }
